edit some parts